# TUP2024-Sentry-Framework

./: .gitignore  .gitmodules  README.md
scripts/: WatchDog_full system.sh
src/auto_aim_interfaces/: CMakeLists.txt  README.md  package.xml
src/auto_aim_interfaces/msg/: Armors.msg  Serial.msg  State.msg  Uart.msg
src/rm_serial_port/portClass/include/: crc_check.hpp  data_transform.hpp  port_interface.hpp  serialport.hpp  serialport_node.hpp
src/rm_serial_port/portClass/src/: crc_check.cpp  data_transform.cpp  port_interface.cpp  serialport.cpp  serialport_node.cpp
src/rm_serial_port/serialPort/: CMakeLists.txt  package.xml
src/rm_serial_port/serialPort/config/: info_config.yaml
src/ros2_tools/src/rosbag_record/: package.xml  setup.cfg  setup.py
src/ros2_tools/src/rosbag_record/rosbag_record/: rosbag_record_helper.py
